2014-12-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Version 1.28, now maintained here, by us.
	* Makefile.am, configure.ac: Reorganized.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2013-01-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, configure.ac: Allow subdir-objects.

2012-12-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Enable silent rules.

2012-06-22  Peter Breitenlohner   <peb@mppmu.mpg.de>

	* lacheck.l: Avoid buffer overrun for long pathnames
	(detected by Ken Brown <kbrow1i@gmail.com>).

2012-06-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* lacheck.l: Added the never-interactive option to prevent
	flex from creating a problematic prototype for isatty().

2010-12-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* lacheck.l: Define yywrap() after flex-provided prototype.

	* lacheck.man: Formatting.  Avoid use of build date.

2010-02-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* lacheck.l: Do not #include <win32lib.h> for MinGW32.

2009-08-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid maximal compiler warnings.
	* lacheck.l (push): Change param1 from 'unsigned char *' to
	'const char *'.
	(struct tex_group): Change member s_name from 'unsigned char *'
	to 'char *' and drop or adjust casts accordingly.

2009-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: lacheck.l provides yywrap, no need for $(LEXLIB).

2009-06-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CFLAGS): enable compiler warnings.
	* configure.ac: use AC_PROG_LEX instead of KPSE_PROG_LEX
	because 'flex -l' produces bad code (at least with flex-2.5.35).

	* lacheck.l: use ANSI C prototypes for all functions.
	declare yywrap as static.
	(g_checkend): add explict braces to avoid ambiguous `else'.

2009-04-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Adapt to TL2009 build system.

2008-02-29  Peter Breitenlohner  <peb@mppmu.mpg.de>
